[package]
name = "slick-worker"
version = "0.1.0"
authors = ["Saju Thankappan <sajuthankappan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
env_logger = "0.7.1"
getset = "0.1.1"
lapin = "1.1.0"
log = "0.4.8"
reqwest = { version = "0.10.6", features = ["json"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.55"
tokio = { version = "0.2.21", features = ["macros"] }

[dependencies.wread-data-mongodb]
version = "0.9.0"
features = ["read", "write"]
