[package]
name = "slick-worker"
version = "0.2.2"
authors = ["Saju Thankappan <sajuthankappan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
env_logger = "0.7.1"
getset = "0.1.1"
lapin = "1.2.1"
log = "0.4.8"
reqwest = { version = "0.10.6", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
slick-models = { version = "0.7.3", git = "https://github.com/sajuthankappan/slick-models-rs.git" }
#slick-models = { version = "0.6.0", path = "../slick-models-rs" }
tokio = { version = "0.2.21", features = ["macros"] }

[dependencies.wread-data-mongodb]
version = "0.11.0"
features = ["read", "write"]
