[package]
name = "slick-worker"
version = "0.6.0"
authors = ["Saju Thankappan <sajuthankappan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
env_logger = "0.7.1"
getset = "0.1.1"
lapin = "1.4.1"
log = "0.4.11"
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
slick-models = { version = "0.12.2", git = "https://github.com/sajuthankappan/slick-models-rs.git" }
#slick-models = { version = "0.10.4", path = "../slick-models-rs" }
tokio = { version = "0.2.22", features = ["macros"] }

[dependencies.wread-data-mongodb]
version = "0.12.2"
features = ["read", "write"]
